@@ -19,28 +19,31 @@ Download
 <a href="socklog-1.4.1.tar.gz">socklog-1.4.1.tar.gz</a> into
 <tt>/package</tt> and unpack the archive
 <pre>
-  # cd /package
-  # gunzip socklog-1.4.1.tar
-  # tar -xpf socklog-1.4.1.tar
-  # rm socklog-1.4.1.tar
-  # cd admin/socklog-1.4.1
+ # cd /package
+ # gunzip socklog-1.4.1.tar
+ # tar -xpf socklog-1.4.1.tar
+ # rm socklog-1.4.1.tar
+ # cd admin/socklog-1.4.1
 </pre>
 On solaris read <a href="readme.solaris.html">using socklog on solaris</a>
 before proceeding.
 <p>
 Compile and install the <i>socklog</i> programs
 <pre>
-  # package/install
+ # package/install
 </pre>
 If you want to make the man pages available in the <tt>/usr/local/man/</tt>
 hierarchy, do:
 <pre>
-  # package/install-man
+ # package/install-man
 </pre>
 To report success:
 <pre>
-  # mail pape-socklog-1.4.1@smarden.org &lt;compile/sysdeps
+ # mail pape-socklog-1.4.1@smarden.org &lt;compile/sysdeps
 </pre>
+If you use <i>socklog</i> regularly, please
+<a href="http://smarden.org/pape/#contribution">contribute</a> to the project.
+<p>
 Refer to <a href="configuration.html">Configuration</a> for
 configuring and setting up <i>socklog</i> services.
 <hr>
